# Claude-Cascade-MCP

./: .env.example  .gitignore  CHANGELOG.md  NOTIZ.md  README.md  RELEASE_NOTES_v0.2.0.md  bot.py  mcp_server.py  pyproject.toml  requirements-dev.txt  requirements.txt
cascade/: __init__.py  _core_setup.py  chat_memory.py  check_repair.py  claude_cli.py  config.py  context7_client.py  core.py  cost_budget.py  error_log.py  failover.py  feedback.py  healing.py  i18n.py  llm_client.py  logging_config.py  memory.py  models.py  multiplan.py  patterns.py  progress_format.py  provider_health.py  quick_review.py  rag.py  rate_limit.py  reflect.py  repo_resolver.py  research.py  role_config.py  secrets_store.py  setup_cli.py  simple_actions.py  skill_suggester.py  store.py  style_probe.py  summarizer.py  triage.py  upload_classifier.py  web_search.py  workspace.py
npm/: .npmignore  LICENSE  README.md  package.json
scripts/: install-rlm-claude.ps1  install-rlm-claude.sh  mcp-launcher.sh
store/: memory.jsonl
systemd/: cascade-bot.service
tests/: test_agents.py  test_auto_lint.py  test_bot_helpers.py  test_bot_smoke.py  test_bot_startup.py  test_chat_memory.py  test_claude_cli.py  test_claude_cli_stdin.py  test_core.py  test_core_quality_loop.py  test_de_en_helper.py  test_diff_signals.py  test_e2e_drive_setup.py  test_e2e_triage_paths.py  test_effort_replan.py  test_feedback.py  test_healing.py  test_i18n.py  test_llm_client.py  test_logging_config.py  test_mcp_server.py  test_memory_and_models_ctx.py  test_models_triage.py  test_phase_features.py  test_progress_format.py  (+20 more)
(+33 files in other folders)
